go-todo/overlays/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-todo
  labels:
    app: go-todo
spec:
  selector:
    matchLabels:
      app: go-todo
  template:
    metadata:
      labels:
        app: go-todo
    spec:
      containers:
        - name: go-todo
          image: '328373003584.dkr.ecr.eu-west-2.amazonaws.com/go-todo:74219bccf809027b1641c5dc0b05f7add6031aa2'
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
